# stignore-manager

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example
.github/: CODEOWNERS
.github/workflows/: audit.yaml  cd.yaml  ci.yaml
agent/: CLAUDE.md  Cargo.toml  config-agent1.toml  config-agent2.toml  config-agent3.toml
agent/scripts/: create_agents.sh  fresh_start.sh  run_agents.sh
agent/src/: filesystem.rs  main.rs  tasks.rs
assets/css/: style.css
html/: index.html
html/components/: agent-modal.html  dynamic-items.html  infopanel.html  itemlist.html  navbar.html  subitems.html  subsubitems.html
html/pages/: agents_overview.html  index.html  login.html  not_found.html
html/utils/: footer.html  head.html  header.html  scripts.html
lib/: Cargo.toml
lib/src/: config.rs  types.rs
manager/: CLAUDE.md  Cargo.toml  TODO.md
manager/assets/css/: style.css
manager/html/components/: infopanel.html  itemlist.html
manager/html/pages/: not_found.html
manager/html/utils/: footer.html  scripts.html
manager/src/: agent_client.rs  agents.rs  components.rs  config.rs  lib.rs  main.rs  pages.rs
manager/tests/: integration_agent_communication.rs  integration_htmx_endpoints.rs
manager/tests/common/: mod.rs
scripts/: create_agents.sh  create_fake_data.sh  run_agents.sh  run_manager.sh
src/: agent_client.rs  agents.rs  components.rs  config.rs  lib.rs  main.rs  pages.rs  types.rs
tests/: integration_agent_communication.rs  integration_htmx_endpoints.rs  integration_web_server.rs
tests/common/: mod.rs
