[workspace]
members = ["lib", "agent", "manager"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.4"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.40"
toml = "0.9.5"
axum-template = { version = "3.0.0", features = ["tera"] }
tera = "1.20.0"
tower-http = { version = "0.6.1", features = ["fs", "compression-full"] }
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22"
serde_json = "1.0"


