[package]
name = "stignore-agent"
version = "1.1.0"
edition = "2024"
authors = ["Michael Robbins"]

[dependencies]
stignore-lib = { path = "../lib" }
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum-test = "17.3.0"
tempfile = "3.15.0"
