[package]
name = "stignore-manager"
version = "1.2.1"
edition = "2021"
authors = ["Michael Robbins"]

[dependencies]
stignore-lib = { path = "../lib" }
axum = { workspace = true, features = ["macros"] }
axum-template = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "signal"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tera = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
serde_json = { workspace = true }
axum-test = "17.3.0"
wiremock = "0.6"
tempfile = "3.15.0"
tower = { version = "0.4", features = ["util"] }
